@@ -1,3 +1,8 @@
+Tue Jul  9 15:03:24 2013  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/fileutils.rb (FileUtils#chown, FileUtils#chown_R): If user
+	  and group are both nil, print ":".
+
 Tue Jul  9 12:47:08 2013  Masaki Matsushita  <glass.saga@gmail.com>
 
 	* io.c (appendline): use READ_CHAR_PENDING_XXX macros and
